cluster/public-facing /blog/blog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-deployment
  namespace: blog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
      - name: blog
        image: ghcr.io/caffeinatedope/blog:latest@sha256:99c5773f61f20f3699d17e7a8c8f4eef70c95c74a42a3ffee55992710018a096 # {"$imagepolicy": "blog:blog-imagepolicy"}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4321
