cluster/public-facing /blog/blogsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-service
  namespace: blog
spec:
  type: LoadBalancer
  selector:
    app: blog
  ports:
  - port: 4321
    targetPort: 4321
